# AI-Serch

./: .gitignore  AGENTS.md  README.md  env.example  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py  exceptions.py
app/mcp/: __init__.py  server.py  tools.py
app/policies/: source_policy.yml
app/schemas/: claim.py  conflict.py  constraints.py  evidence.py  page.py  search.py  source.py  trusted_search.py
app/services/: answer_constraint_builder.py  claim_aggregator.py  claim_decomposer.py  conflict_detector.py  evidence_extractor.py  page_fetcher.py  question_classifier.py  reliability_scorer.py  search_adapter.py  search_planner.py  search_provider.py  search_provider_factory.py  search_provider_normalizer.py  source_classifier.py  trusted_search_service.py
docs/: 05_api_contract.md  06_test_cases.md  critical_search_layer_constraints.md  critical_search_layer_detailed_development_tasks.md  critical_search_layer_development_sequence_v_0_1.md  critical_search_layer_prd_v_0_1.md  search_provider_integration_plan.md  tavily_opt_in_usage.md  tavily_provider_implementation_plan.md  tavily_provider_manual_verification.md  tavily_provider_preflight_checklist.md  tavily_real_world_evaluation_plan.md  trusted_search_tavily_opt_in_wiring_plan.md
docs/evals/: tavily_real_world_eval_findings_001.md  tavily_real_world_eval_run_001.md  tavily_real_world_eval_template.md
tests/: __init__.py  test_trusted_search_mock.py
tests/e2e/: __init__.py  test_trusted_search_flow.py
tests/integration/: test_tavily_provider_integration.py  (+1 more)
tests/mcp/: __init__.py  (+1 more)
(+24 files in other folders)
